2011-05-16  Jeremy Noble  <jer.noble@apple.com>

        Reviewed by Darin Adler.

        Disable keyboard input (with exceptions) in full-screen mode.
        https://bugs.webkit.org/show_bug.cgi?id=60943

        * fullscreen/full-screen-keyboard-disabled-expected.txt: Added.
        * fullscreen/full-screen-keyboard-disabled.html: Added.
        * fullscreen/full-screen-keyboard-enabled-expected.txt: Added.
        * fullscreen/full-screen-keyboard-enabled.html: Added.

2011-05-17  Jeremy Noble  <jer.noble@apple.com>

        Reviewed by Darin Adler.

        Removing a full-screen element or ancestor from the DOM should trigger exiting full-screen mode.
        https://bugs.webkit.org/show_bug.cgi?id=60997

        Updated the following tests with the new expectation that removing an element from the DOM will trigger
        full screen mode to exit.

        * fullscreen/full-screen-remove-ancestor-expected.txt:
        * fullscreen/full-screen-remove-ancestor.html:
        * fullscreen/full-screen-remove-children-expected.txt:
        * fullscreen/full-screen-remove-children.html:
        * fullscreen/full-screen-remove-expected.txt:
        * fullscreen/full-screen-remove.html:

2011-05-17  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Skip failing tests on minor Qt platforms.

        * platform/qt-arm/Skipped:
        * platform/qt-mac/Skipped:
        * platform/qt-wk2/Skipped:

2011-05-17  Yuzo Fujishima  <yuzo@google.com>

        Unreviewed Chromium test expectation change.

        The following tests now pass:
        fast/js/mozilla/eval/exhaustive-fun-normalcaller-direct-strictcode.html
        fast/js/mozilla/eval/exhaustive-fun-strictcaller-direct-normalcode.html
        fast/js/mozilla/eval/exhaustive-fun-strictcaller-direct-strictcode.html

        * platform/chromium/test_expectations.txt:

2011-05-17  Yuzo Fujishima  <yuzo@google.com>

        Unreviewed Chromium test expectation change.
