@@ -112,6 +112,7 @@ public:
     static void garbageCollectorCollectOnAlternateThread(bool waitUntilDone);
     static void setAutofilled(const QWebElement&, bool enabled);
     static void setJavaScriptProfilingEnabled(QWebFrame*, bool enabled);
+    static void setValueForUser(const QWebElement&, const QString& value);
     static int javaScriptObjectsCount();
     static void clearScriptWorlds();
     static void evaluateScriptInIsolatedWorld(QWebFrame* frame, int worldID, const QString& script);
