@@ -155,6 +155,7 @@ public slots:
     void setAutofilled(const QWebElement&, bool enable);
     void setJavaScriptProfilingEnabled(bool enable);
     void setTimelineProfilingEnabled(bool enable);
+    void setValueForUser(const QWebElement&, const QString& value);
     void setFixedContentsSize(int width, int height);
     void setPrivateBrowsingEnabled(bool enable);
     void setSpatialNavigationEnabled(bool enabled);
